Updated CIP-139 endpoints